--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=currency-cexchange-service
+spring.application.name=currency-cexchange
+server.port=8000
+spring.config.import=optional:configserver:http://localhost:8888
