--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=currency-cexchange
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.jps.show-sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
