--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=currency-cexchange
+spring.application.name=currency-exchange
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
